Send Newsletter on Submit

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=0bea4b2a12e14d72b2640c1dcea17f3a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=null://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
